# ivis

./: .gitignore  .gitignore~  .nfs0000012c800162cf00000160  .nfs0000012c800168f700000161  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
archive/ivis_tmp/: classic3D_analytical.py  classic3D_cached.py  pca.py
archive/ivis_utils_tmp/: dformat.py  mod_loss_rrl.py  process_casa.py  read_channel.py  uvcontsub.py
deconv/: __init__.py  core.py  imager.py  io.py  pipeline.py
deconv/utils/: dcasacore.py  dcvel2.py  dutils.py  mod_loss.py  plotms.py  projsd.py  simu.py  vlsrk_from_ms.py
docs/: .gitignore  api.rst  conf.py  hije.rst  index.rst  requirements.txt  workflow.rst
docs/contents/: memos.rst  workflow.rst
docs/models/: .gitignore  gmfs.rst  single.rst  twist.rst
docs/tutorials/: effective_beam.ipynb  get_started.ipynb  get_started_new.ipynb  noise.ipynb  noise_new.ipynb
examples/: .gitignore  askap_deconv.pbs  package_beams.py  plot_Karlie.py  plot_gaskap.py  rotate.py  test_ATCA.py  test_Dave.py  test_Karlie.py  test_MeerKAT.py  test_gaskap.py  test_gaskap_multiproc.py  test_pipeline.py  untar.py
hije/: __init__.py  core.py  imager.py  io.py  logger.py  pipeline.py
hije/utils/: dcasacore.py  dcvel2.py  dunits.py  fixms.py  mod_loss.py  mod_loss_rrl.py  process.py
ivis/: __init__.py  core.py  imager.py  imager_rrl.py  io.py  logger.py  pipeline.py  types.py
ivis/models/: __init__.py  base.py  basis.py  classic.py  classic3D.py  classic3D_memory.py  gmfs.py  lrsb.py  pca.py  twist.py  wavelet.py
ivis/optim/: solvers.py
ivis/readers/: __init__.py  base.py  ms_casacore.py  ms_casacore_spw.py
ivis/tmp/: imager_rrl.py
ivis/utils/: __init__.py  dcasacore.py  dms2npz.py  dunits.py  dutils.py  effpb.py  fourier.py  mod_loss.py  msconcat.py  plotms.py  readers.py  vlsrk_from_ms.py
scripts/: generate_noise.py  make_effective_pb.py  run_auclair.py
scripts/fullsurvey/: .gitignore  compute_PB.py  cut_HI_cube_GASS.py  linear_mosaic_parallel.py  main.slurm  main_fullsurvey.py  main_fullsurvey_linear.py  main_gpu.slurm  main_linear.slurm  make_central_rgb.py  make_plots.py  make_sps.py  merge_cubes.py  package_beam.py  plot_beams.py  plot_result.py  plot_short_spacing.py  plot_sps_from_products.py  project_short_spacing_atca.py  short_spacing.py  short_spacing_cube.py  short_spacing_old.py  untar.py  untar.slurm
testruns/: test_core.py
tests/: package_beams.py  test_askap.py  test_baptiste.py  test_core.py  test_core_linear_mosaic.py  test_flux.py  test_meerkat3D.py  test_mock.py  test_new.py  test_one_beam.py  test_package.py  test_point_source.py  test_readms.py  test_twist.py  test_wstack.py
(+60 files in other folders)
