[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivis"
version = "0.1.0"
description = "Interferometric Visibility-space Inversion Software"
authors = [
    { name = "Antoine Marchal", email = "antoine.marchal@anu.edu.au" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"


dependencies = [
    "numpy",
    "scipy",
    "astropy"
]

[project.optional-dependencies]
runtime = [
    "torch",
    "casacore",
    "matplotlib",
    "pytorch_finufft",
    "dask",
    "daskms",
    "reproject",
    "radio_beam",
    "psutil",
    "tqdm",
    "joblib",
    "marchalib"
]

docs = [
    "sphinx",
    "furo",
    "myst-nb",
    "sphinx-autodoc-typehints"
]

[project.urls]
Homepage = "https://github.com/antoinemarchal/ivis"