[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivis"
version = "0.1.0"
description = "Interferometric Visibility-space Inversion Software"
authors = [
    { name = "Antoine Marchal", email = "antoine.marchal@anu.edu.au" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "torch",
    "matplotlib",
    "pytorch_finufft",
    "finufft==2.3.0",	
    "reproject",
    "radio_beam",
    "psutil",
    "tqdm",
    "joblib",
]

[project.optional-dependencies]
docs = [
     "sphinx",
     "furo",
     "sphinx-autodoc-typehints",
     "myst-nb"
     ]

[project.urls]
Homepage = "https://github.com/antoinemarchal/ivis"